--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@types/react-redux": "^7.1.23",
     "graphql": "^16.3.0",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.28.1",
     "react-redux": "^7.2.6",
